--- a/drogo/templates/layout.html
+++ b/drogo/templates/layout.html
@@ -31,6 +31,9 @@
         </div><!--/.container-fluid -->
       </div>
 
+      {% block breadcrumbs %}
+      {% endblock %}
+
       {% block content %}
       {% endblock %}
     </div> <!-- /container -->
