--- a/drogo/templates/project_month.html
+++ b/drogo/templates/project_month.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% from '_macros.html' import breadcrumbs, worktimes_table %}
+{% from '_macros.html' import breadcrumbs, worktimes_table with context %}
 
 {% block breadcrumbs %}
   {{ breadcrumbs([
