--- a/drogo/templates/homepage.html
+++ b/drogo/templates/homepage.html
@@ -7,6 +7,8 @@
 
        <p>{{users}} <a href="{{ url_for('.users') }}">users</a> ,
          {{ projects }} <a href="{{ url_for('.projects') }}">projects</a>.</p>
+
+       <p><a href="{{ url_for('.dashboard') }}">Dashboard</a></p>
     </div>
   </div>
 {% endblock %}
