[views] Add a per day view - similar to a timesheet.

--- a/drogo/templates/_macros.html
+++ b/drogo/templates/_macros.html
@@ -60,3 +60,10 @@
     {{ '%.2g' % h or '-' }}
   {% endif %}
 {% endmacro %}
+
+
+{% macro tickets(ts) %}
+  {% for t in ts %}
+    {{ t.number }}
+  {% endfor %}
+{% endmacro %}
