--- a/drogo/templates/user/summary.html
+++ b/drogo/templates/user/summary.html
@@ -1,5 +1,5 @@
 {% extends 'user/user.html' %}
-{% from '_macros.html' import flag_format, hours %}
+{% from '_macros.html' import flag_format, hours, tickets %}
 
 {% block tablecontent %}
   <table class="table">
@@ -9,16 +9,12 @@
       <th>Hours</th>
       <th>Days</th>
     </tr>
-    {% for row in data %}
-      <tr {{ flag_format(row[0]) }}>
-        <td>{{ row[0] or '?' }}</td>
-        <td>
-          {% for t in row[2] %}
-            {{ t.number }}
-          {% endfor %}
-        </td>
-        <td>{{ hours(row[1]) }}</td>
-        <td>{{ hours(row[1]/8) }}</td>
+    {% for project, hours, ts in data %}
+      <tr {{ flag_format(project) }}>
+        <td>{{ project or '?' }}</td>
+        <td>{{ tickets(ts) }}</td>
+        <td>{{ hours(hours) }}</td>
+        <td>{{ hours(hours/8) }}</td>
       </tr>
     {% endfor %}
   </table>
