--- a/drogo/templates/homepage.html
+++ b/drogo/templates/homepage.html
@@ -3,12 +3,18 @@
 {% block content %}
   <div class="row">
     <div class="col-sm-12">
-       <p class="lead">A Timesheet Manager</p>
+      <p class="lead">A Timesheet Manager</p>
 
-       <p>{{users}} <a href="{{ url_for('.users') }}">users</a> ,
-         {{ projects }} <a href="{{ url_for('.projects') }}">projects</a>.</p>
+      {% if current_user.is_admin %}
+      <p>{{ users }} <a href="{{ url_for('.users') }}">users</a> ,
+        {{ projects }} <a href="{{ url_for('.projects') }}">projects</a>.</p>
 
-       <p><a href="{{ url_for('.dashboard') }}">Dashboard</a></p>
+      <p><a href="{{ url_for('.dashboard') }}">Dashboard</a></p>
+      {% else %}
+      <p>
+        <a href="{{ url_for('.user-overview', user_id=current_user.id) }}">My Summary</a>
+      </p>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
